--- a/实现思路.md
+++ b/实现思路.md
@@ -29,3 +29,42 @@
 2. vite会将jsx编译成js
 
    1. esbulid内置jsx的loader，解析jsx，调用React.CreateElement生成虚拟dom
+
+## 2. 任务调度器及fiber架构
+
+1. 使用vdom生成dom节点，如果vdom树层级很深，在递归创建节点时会导致内存过大（设置可能爆栈），同时一次递归完成所有的节点会阻塞dom的渲染，导致界面卡顿
+   
+
+2. 解决递归渲染的问题：
+   1. 可以使用任务调度器（requestIdleCallback）
+      1. requestIdleCallback会在浏览器空闲时间被调用，那递归渲染dom树的逻辑就可以放到requestIdleCallback中，不阻塞渲染流程
+
+   2. 在浏览器空闲时间内渲染部分dom节点，空闲时间不足以将所有的vdom树都渲染完毕，那如何控制vdom的渲染，使其一次只渲染一个或者部分，渲染一个之后判断是否还有空闲时间，再继续渲染
+      1. fiber架构
+
+
+3. fiber架构
+
+将vdom树转变成可以中断的fiber链表，每次只获取链表中的一个节点，渲染完成后如果还有空余时间再渲染另一个，如果没有时间了则等待。
+
+vdom树转变成链表，可以将vdom树一次都转换完毕存储起来；也可以一边读取vdom，一边转换链表。一边读取一边转换的性能肯定是要比一次性的要好.
+
+
+vdom生成链表的顺序应该是
+   1. child
+   2. sibling
+   3. parent.sibling(叔叔节点)
+   
+fiber节点的结构:
+```
+{
+   dom: HTMLElement,
+   parent: Fiber,
+   child: Fiber,
+   sibling: Fiber,
+   type: string,
+   props: typeof VDOM.props
+}
+```
+
+如果在执行某几个任务时浏览器一直没有空余时间，那只会渲染部分节点，剩下的会卡住，如何解决？
