统一提交dom，解决当某些任务中没有剩余时间导致dom渲染卡住的问题

--- a/实现思路.md
+++ b/实现思路.md
@@ -23,12 +23,13 @@
 3. 最终导出对象 没有导出ReactDom
 
 
-## js =》 jsx
+### js =》 jsx
 
 1. 创建vite项目
 2. vite会将jsx编译成js
 
    1. esbulid内置jsx的loader，解析jsx，调用React.CreateElement生成虚拟dom
+
 
 ## 2. 任务调度器及fiber架构
 
@@ -68,3 +69,11 @@ fiber节点的结构:
 ```
 
 如果在执行某几个任务时浏览器一直没有空余时间，那只会渲染部分节点，剩下的会卡住，如何解决？
+
+
+## 3. 统一提交
+
+如果在执行某几个任务时浏览器一直没有空余时间，那只会渲染部分节点，剩下的会卡住，如何解决？
+要解决这个问题，首先在使用vdom生成dom的时候不进行渲染，等到所有的dom节点都生成完毕之后，再统一append到父节点上。
+
+## 4. 实现function component
