--- a/实现思路.md
+++ b/实现思路.md
@@ -77,3 +77,5 @@ fiber节点的结构:
 要解决这个问题，首先在使用vdom生成dom的时候不进行渲染，等到所有的dom节点都生成完毕之后，再统一append到父节点上。
 
 ## 4. 实现function component
+
+![fc](./asset//%E5%AE%9E%E7%8E%B0functionComponent.png)
