--- a/实现思路.md
+++ b/实现思路.md
@@ -65,6 +65,7 @@ fiber节点的结构:
    sibling: Fiber,
    type: string,
    props: typeof VDOM.props
+   alternate: Fiber, // 备份，这个参数指向老的fiber结点，用来做diff
 }
 ```
 
@@ -79,3 +80,15 @@ fiber节点的结构:
 ## 4. 实现function component
 
 ![fc](./asset//%E5%AE%9E%E7%8E%B0functionComponent.png)
+
+## 5. 
+
+1. 事件绑定
+
+react的事件都是onXXX，以on开头的驼峰式命名，浏览器原生事件的监听是不带on的小写事件。
+进行事件绑定时就要做额外的处理：updateProps中
+
+2. diff props
+   1. 找到新的VDom树 ：为啥新dom树可以直接从root演变过来呢
+   2. 新vdom树上每一个结点有一个属性(alternate)指向老的结点
+   3. 比较并更新
